# tutor-contrib-pok

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
tutorpok/: __about__.py  __init__.py  plugin.py
tutorpok/patches/: openedx-common-settings  openedx-dockerfile-post-python-requirements
