[project]
name = "tutor-contrib-pok"
description = "Tutor plugin to integrate POK certificates into Open edX"
authors = [
  { name = "Aulasneo", email = "andres@aulasneo.com" },
]
license = { text = "AGPLv3" }
license-files = []
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tutor>=20.0.0,<21.0.0",
]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/aulasneo/tutor-contrib-pok/issues"
Code = "https://github.com/aulasneo/tutor-contrib-pok"

[project.entry-points."tutor.plugin.v1"]
pok = "tutorpok.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tutorpok/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["tutorpok"]

[tool.hatch.build.targets.sdist]
strict-naming = false
include = ["/tutorpok", "/README.rst", "/LICENSE.txt", "/CHANGELOG.md"]
exclude = ["tests*"]
